tests/invalid/import_empty_path.ar
import "";

fn main() { }

//! 1:8: error: empty import path
